Støtt både sak-aktoer-person og sak-bruker lenker i fagsak-oppslag